# my_streamlit_area

./: .pre-commit-config.yaml  Main concepts - Streamlit Docs.url  Python Tutorial- Streamlit - DataCamp.url  README.md  calo_app.py  calo_app_upload.py  pyproject.toml  requirements.txt  streamlit_tutorial_app.py  test_pre_commit.py  timer.py  timer_test.py  timer_test_from_sunday.py
.streamlit/: config.toml
my_streamlit_area/: classes_for_timer.py
tests/: test_project.py  test_remaining_timer_s.py
